添加wiki页面脚手架（有兴趣可进行fork）

--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -35,13 +35,13 @@ nav#nav
         a.nav-rightbutton.site-page.darkmode_switchbutton(onclick="switchDarkMode()")
           i.fas.fa-adjust
       
+      #console-switch.nav-button
+        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
+          i.anzhiyu-icon-train.anzhiyufont
+
       .nav-button#search-button(title="随机前往一个开往项目网站")
         a.site-page(data-pjax-state="external" draggable="false" href="https://www.travellings.cn/go.html" rel="external nofollow" title="随机前往一个开往项目网站")
           i.anzhiyu-icon-train.anzhiyufont
-      
-      //- #console-switch.nav-button
-      //-   a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
-      //-     i.anzhiyu-icon-train.anzhiyufont
       
     .nav-button#toggle-menu
       a.site-page
