--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
@@ -25,7 +25,7 @@
                 .post-qr-code-desc 支付宝
       style.
         .post-qr-code-desc {
-          MARGIN-TOP: -30PX;
+          margin: -30PX;
         }
   .option
     i.fas.fa-music
