--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -15,3 +15,5 @@ if hexo-config('css_prefix')
 @import './console.css'
 @import './calendar.css'
 @import './coin.css'
+@import '_gavin_diy_style/*.css'
+@import './snackbar.css'
