--- a/themes/sxiaohe/source/css/console.css
+++ b/themes/sxiaohe/source/css/console.css
@@ -1,277 +1,4 @@
-/* ******************通用CSS库******************** */
-.eject {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  transition: 0.5s ease;
-  flex-direction: column;
-  pointer-events: none;
-}
-
-.eject.show {
-  pointer-events: all;
-}
-
-.eject-mask {
-  background: var(--gavin-mask);
-  -webkit-backdrop-filter: blur(0px);
-  backdrop-filter: blur(0px);
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-  transition: 0.5s ease;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  transform: translateZ(0);
-}
-
-.show .eject-mask {
-  -webkit-backdrop-filter: blur(7px);
-  backdrop-filter: blur(7px);
-  opacity: 1;
-  transform: translateZ(0);
-}
-
-.eject-head {
-  position: absolute;
-  top: 30px;
-  left: 5%;
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  opacity: 0;
-  transform: translateY(-15px);
-  transition: .5s ease;
-}
-
-.show .eject-head {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.eject-head>span {
-  font-size: 24px;
-  font-weight: bold;
-  color: #fff;
-  transition: 0.5s;
-}
-
-.eject-head-btns {
-  gap: 15px;
-}
-
-.eject-head .settings-btn,
-.eject-head .close-btn {
-  width: 35px;
-  height: 35px;
-  color: #fff;
-  cursor: pointer;
-  transition: color 0.5s;
-}
-
-.eject-head .settings-btn i,
-.eject-head .close-btn i {
-  line-height: 1;
-  font-size: 35px;
-}
-
-@media screen and (max-width: 768px) {
-  .eject-head {
-      top: 15px;
-      left: 20px;
-      width: calc(100% - 40px);
-  }
-
-  .eject-head>span {
-      font-size: 22px;
-  }
-
-  .eject-head .settings-btn,
-  .eject-head .close-btn {
-      width: 32px;
-      height: 32px;
-  }
-
-  .eject-head .settings-btn i,
-  .eject-head .close-btn i {
-      font-size: 32px;
-  }
-}
-
-.c-c {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-a:hover {
-  color: var(--gavin-highlight);
-}
-
-hr {
-  /* border: 1px dashed var(--dis-f-0); */
-  border-width: 0;
-}
-/* 
-hr::before {
-  content: "";
-} */
-
-#page-header #site-title {
-  font-family: xiaozhuan;
-  font-weight: 100;
-  user-select: none;
-  font-size: 5em;
-}
-
-#article-container {
-  /* font-family: Jinbu; */
-  font-size: 1.1em;
-  display: flex;
-  flex-direction: column;
-}
-
-/* 加密文章适配 */
-.hbe-container > div {
-  display: flex;
-  flex-direction: column;
-}
-
-@media screen and (max-width: 768px) {
-  #page-header #site-title {
-      font-size: 3.6em;
-  }
-
-  #article-container {
-      font-size: 1em;
-  }
-}
-
-/* #aside-content .card-info .card-info-data {
-  font-family: Jinbu;
-} */
-
-.gc-180 {
-  transform: rotate(180deg);
-}
-
-.gc-45 {
-  transform: rotate(45deg);
-}
-
-.fs-1 {
-  font-size: 1.05em;
-  line-height: 1;
-  font-weight: 200;
-}
-
-.fs-2 {
-  font-size: 1.15em;
-  line-height: 1;
-  font-weight: 200;
-}
-
-.fs-3 {
-  font-size: 1.25em;
-  line-height: 1;
-  font-weight: 200;
-}
-
-/* **************************************************************音乐播放器***************************************************************** */
-.global-music .aplayer.aplayer-fixed.aplayer-narrow .aplayer-body {
-  left: -66px !important;
-  /* 默认情况下缩进左侧66px，只留一点箭头部分 */
-}
-
-.global-music .aplayer.aplayer-fixed.aplayer-narrow .aplayer-body:hover {
-  left: 0 !important;
-  /* 鼠标悬停是左侧缩进归零，完全显示按钮 */
-}
-
-.global-music .aplayer .aplayer-lrc p.aplayer-lrc-current {
-  /* margin: 5px !important; */
-  margin: 0.2rem !important;
-  line-height: 1.3rem !important;
-  /* height: auto !important;
-  font-weight: 700; */
-  font-size: 1.3rem !important;
-  /* color: #48E3F6; */
-  color: var(--dis-f-0) !important;
-  /* overflow: visible; */
-  opacity: .9 !important;
-}
-
-.global-music .aplayer .aplayer-lrc p {
-  /* margin: 5px !important;
-  padding: 0 !important; */
-  line-height: 1.3rem !important;
-  height: 1.4rem !important;
-  font-weight: 700;
-  font-size: 1.3rem !important;
-  color: var(--dis-f-0) !important;
-  /* transition: all .5s ease-out; */
-  opacity: .3 !important;
-  /* overflow: hidden; */
-}
-
-/* 歌词框的高度 */
-.global-music .aplayer .aplayer-lrc {
-  padding: 0 !important;
-  height: calc(3rem + 20px) !important;
-  border-radius: 21px;
-  box-shadow: 0 0 36px -9px rgba(0, 0, 0, .25);
-  border: 1px solid rgba(var(--op-dis), .05);
-  /* mask-image: paint(smooth-corners);
-  -webkit-mask-image: paint(smooth-corners);
-  --smooth-level: 24; */
-  /* border: 10px solid #00000000; */
-  /* border-image: 0%; */
-  /* -webkit-border-image: 0%; */
-  background-color: rgba(var(--op), .3);
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-backdrop-filter: saturate(180%) blur(50px);
-  backdrop-filter: saturate(180%) blur(50px);
-  /* transform: translateZ(0); */
-}
-
-.global-music .aplayer .aplayer-lrc .aplayer-lrc-box {
-  margin: 10px;
-  height: 3rem;
-  overflow: hidden;
-}
-
-.global-music .aplayer.aplayer-fixed .aplayer-lrc {
-  /* calc(10% - 105px): 百分比补上参数 */
-  left: 5% !important;
-  width: 90%;
-  text-shadow: none !important;
-}
-
-.global-music .aplayer.aplayer-fixed .aplayer-list {
-  position: relative;
-  background-color: #ffffff;
-  z-index: 99;
-}
-
-iframe #player .player {
-  box-shadow: unset;
-  border-radius: 8px;
-  overflow: hidden;
-  background-color: var(--gavin-widget-bg4);
-}
-
-/* ********************************************************新控制中心***************************************************************** */
-/* 控制中心按钮样式 */
+/* 导航栏中控制中心按钮样式 */
 #console-switch {
   display: flex;
   width: 35px;
@@ -287,549 +14,131 @@ iframe #player .player {
   font-size: 1.4rem;
 }
 
-/* 控制中心界面功能按钮样式 */
-#console {
-  z-index: 999;
-  overflow-y: auto;
-  overflow-x: hidden;
+#console-switch:hover {
+  background: var(--anzhiyu-main);
+  color: var(--anzhiyu-white) !important;
 }
 
-#console .eject-mask {
-  min-height: 650px;
+/* 控制中心界面功能按钮样式 */
+#console {
+  display: flex;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  justify-content: center;
+  opacity: 0;
+  transition: 0.3s ease-out;
+  flex-direction: column;
+  align-items: center;
+  pointer-events: none;
+}
+
+#console.show {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#console .close-btn {
+  width: 35px;
+  height: 35px;
+  position: fixed;
+  right: 5%;
+  top: 5%;
+  font-size: 35px;
+  color: var(--font-color);
+  cursor: pointer;
+  transition: 0.3s;
+  display: flex;
 }
 
 #console .console-btn-group {
   display: flex;
-  position: absolute;
-  top: 565px;
-  justify-content: space-between;
-  width: 290px;
-  opacity: 0;
-  transition: .5s ease;
+  margin: 1rem auto 0 auto;
+  justify-content: center;
+  width: fit-content;
+  top: auto!important;
 }
 
-#console.show .console-btn-group {
-  opacity: 1;
-}
-
-#console .console-btn-group.hide {
-  display: none;
-}
-
-/* #console .console-btn-group .console-btn-item:not(:last-child) {
+#console .console-btn-group .console-btn-item:not(:last-child) {
   margin-right: 0.5rem;
-} */
+}
 
 #console .console-btn-group .console-btn-item {
-  width: 4rem;
-  height: 4rem;
-  transition: 0.5s ease;
+  width: 60px;
+  height: 60px;
+  transition: 0.3s;
   cursor: pointer;
-  transform: scale(0.6) translateY(-100px);
-}
-
-#console.show .console-btn-group .console-btn-item {
-  transform: scale(1) translateY(0px);
 }
 
 #console .console-btn-group .console-btn-item a {
   width: 100%;
   height: 100%;
-  background: var(--f-0);
-  /* border: var(--style-border); */
-  border-radius: 50%;
+  background: var(--card-bg);
+  border: var(--style-border);
+  border-radius: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--font-color);
-  transition: all .5s;
 }
 
-[data-theme=dark] a#darkSwitchBtn {
-  background: var(--gavin-blue2) !important;
-  color: #fff !important;
+[data-theme = dark] a#darkSwitchBtn {
+  background: rgba(50, 150, 255, 0.9) !important;
+  color: var(--anzhiyu-white) !important;
 }
 
 /* hover变色开关 */
 /* #console .console-btn-group .console-btn-item a:hover {
-  background: rgba(var(--op-dis), .3) !important;
+  background: var(--gavin-op-dis-3) !important;
 } */
 
 #console .console-btn-group .console-btn-item.on a {
-  background: var(--gavin-blue2);
-  color: #fff;
+  background: rgba(50, 150, 255, 0.9);
+  color: var(--anzhiyu-white);
   transition: 0.3s;
 }
 
 #console .console-btn-group i {
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  /*图标大小*/
+  font-size: 1.8rem; /*图标大小*/
 }
 
-/* 控制中心音乐播放器样式 */
-
-/* *********************控制中心音乐********************* */
-/* 隐藏原来的Aplayer */
-.global-music .aplayer-body {
-  display: none;
+#console.show .console-mask {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
-#console .console-mainbox {
-  /* margin: 1rem auto 0 auto; */
-  width: 290px;
-  height: 485px;
-  border-radius: 30px;
-  mask-image: paint(smooth-corners);
-  -webkit-mask-image: paint(smooth-corners);
-  --smooth-level: 40;
-  /*曲率连续圆角*/
-  /* border: var(--style-border); */
-  background: var(--f-0);
+#console .console-mask {
+  background: var(--anzhiyu-maskbgdeep);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
   position: absolute;
-  overflow: hidden;
-  top: 70px;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.5s ease;
-}
-
-#console .console-mainbox:not(#console-music-item-main) {
-  background: var(--vercel-background);
-}
-
-#console-music-item-main {
-  padding: 20px;
-  transform: scale(0.9) translateY(-50px);
-}
-
-#console-music-item-main.item-show {
-  transform: scale(1) translateY(0px);
-}
-
-#console-settings.item-show,
-#console-setting-info1.item-show,
-#console-setting-info2.item-show,
-#console-setting-info3.item-show,
-#console-music-item-main.item-show,
-#console-music-item-list.item-show,
-#console-music-item-lrc.item-show,
-#console-songsheet-item-list.item-show {
-  opacity: 1;
-  pointer-events: all;
-  transition: all 0.5s ease;
-}
-
-/* 封面 */
-#console-music-cover {
-  width: 250px;
-  height: 250px;
-  overflow: hidden;
-  background-color: var(--gavin-widget-bg2);
-  border-radius: 10px;
-  mask-image: paint(smooth-corners);
-  -webkit-mask-image: paint(smooth-corners);
-  --smooth-level: 13;
-  /*曲率连续圆角*/
-}
-
-#console-music-cover img {
-  width: 100%;
-  height: 100%;
-}
-
-#console-music-item-main .cover-shadow {
-  width: 250px;
-  height: 250px;
-  position: absolute;
-  top: 30px;
-  border-radius: 4px;
-  -webkit-filter: blur(12px) opacity(.6);
-  filter: blur(16px) opacity(.56);
-  transform: scale(.92, .96);
   z-index: -1;
+  transition: 0.3s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
-/* 曲名和作者 */
-#console-music-title,
-#console-music-author {
-  width: 100%;
+.console-head {
+  position: fixed;
   display: flex;
-  white-space: nowrap;
-  overflow: hidden;
-  align-items: center;
-  line-height: 1.3;
+  top: 3.5%;
+  left: 5%;
+  font-size: 1.5rem;
+  font-weight: 900;
 }
 
-#console-music-title {
-  height: 44px;
-  padding-top: 14px;
-  margin-bottom: -4px;
-}
-
-#console-music-title-text {
-  font-size: 1.3rem;
-  font-weight: bold;
-  color: var(--dis-f-0);
-}
-
-#console-music-author {
-  height: 25px;
-}
-
-#console-music-author-text {
-  font-size: 15px;
-  color: rgba(var(--op-dis), .6);
-}
-
-/* 组件外框 */
-.console-progressbar-div {
-  width: 100%;
-  height: 30px;
-  display: flex;
-}
-
-#console-music-ctrl-btns {
-  width: 100%;
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#music-ctrl-first,
-#music-ctrl-left,
-#music-ctrl-center,
-#music-ctrl-right,
-#music-ctrl-end {
-  width: 20%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.console-music-ctrl-btn {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  transform: scale(1.1);
-  transition: .5s ease;
-}
-
-/* 字色和字号 */
-.console-music-ctrl-btn i {
+.fas {
+  font-weight: 900;
+  font-family: "Font Awesome 6 Free";
+  font-style: normal;
   line-height: 1;
-}
-
-.console-mainbox a {
-  color: var(--font-color);
-  /*#99a9bf*/
-}
-
-#music-ctrl-btn-center i {
-  color: var(--dis-f-0);
-  font-size: 26px;
-  transition: .5s ease;
-}
-
-#music-ctrl-btn-left i,
-#music-ctrl-btn-right i {
-  font-size: 26px;
-}
-
-#music-ctrl-btn-first i,
-#music-ctrl-btn-end i {
-  font-size: 21px;
-  opacity: 0.72;
-}
-
-.console-music-ctrl-btn:hover {
-  color: var(--dis-f-0);
-}
-
-.console-music-ctrl-btn:active {
-  background: var(--gavin-widget-bg1);
-}
-
-@media screen and (min-width: 768px) {
-  .console-music-ctrl-btn:hover {
-      background: var(--gavin-widget-bg1);
-  }
-}
-
-#progress-low-btn,
-#progress-high-btn {
-  font-size: 11px;
-  color: rgba(136, 136, 136, 0.5);
-}
-
-/* 进度条和音量条 */
-#progress-low,
-#progress-high {
-  width: 2.5rem;
-}
-
-#music-progressbar {
-  width: 100%;
-}
-
-#volume-low,
-#volume-high {
-  width: 1.5rem;
-}
-
-#music-volumebar {
-  width: 100%;
-}
-
-#progress-low,
-#progress-high,
-#music-progressbar,
-#volume-low,
-#volume-high,
-#music-volumebar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#p_bar_bg,
-#v_bar_bg {
-  width: calc(100% - 1rem);
-  height: 0.4rem;
-  border-radius: 0.4rem;
-  /* background-color: rgba(136, 136, 136, 0.5); */
-  overflow: hidden;
-  transition: height .3s;
-}
-
-[data-theme="dark"] #p_bar_bg,
-[data-theme="dark"] #v_bar_bg {
-  background-color: rgba(136, 136, 136, 0.36);
-}
-
-[data-theme="light"] #p_bar_bg,
-[data-theme="light"] #v_bar_bg {
-  background-color: rgba(136, 136, 136, 0.24);
-}
-
-#p_bar,
-#v_bar {
-  width: 100%;
-  height: 100%;
-  transform: translateX(-100%);
-  border-radius: 0.4rem;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  background-color: var(--font-color);
-  transition: background-color 0.5s;
-}
-
-/* 控制中心文本不可选中 */
-#console a,
-#console span {
-  user-select: none;
-}
-
-/* *********************歌单显示********************** */
-.console-list-head {
-  width: 100%;
-  height: 60px;
-  /* border-bottom: 1px solid var(--vercel-border-color); */
-  display: flex;
-  align-items: center;
-  flex-flow: column;
-  transition: all 0.5s;
-}
-
-/* .console-list-foot {
-  width: 100%;
-  height: 1.8rem;
-  border-top: 1px solid var(--vercel-border-color);
-  transition: all 0.5s;
-} */
-
-.console-list-body {
-  width: 100%;
-  height: calc(100% - 90px);
-  background: var(--f-0);
-  overflow-y: scroll;
-  padding: 0;
-  border-top: 1px solid var(--vercel-border-color);
-  border-bottom: 1px solid var(--vercel-border-color);
-  scrollbar-width: none;
-  transition: .5s;
-}
-
-.console-list-body::-webkit-scrollbar {
-  display: none;
-}
-
-#console-settings-list,
-#console-music-list,
-#console-songsheet-list {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  list-style: none;
-  /*消除序号*/
-  padding-inline-start: 0;
-  overflow-y: auto;
-  scrollbar-width: none;
-}
-
-/* 隐藏滚动条 */
-#console-settings-list::-webkit-scrollbar,
-#console-music-list::-webkit-scrollbar,
-#console-songsheet-list::-webkit-scrollbar {
-  display: none;
-}
-
-#console-music-list li {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-#console-music-list li:hover {
-  background-color: var(--vercel-hover-bg);
-}
-
-#console-music-list li:not(:first-child) div.list-music-info2 {
-  border-top: 1px solid var(--vercel-border-color);
-  transition: all .5s;
-}
-
-div.list-music-info1 {
-  width: 35px;
-}
-
-div.list-music-info2 {
-  width: calc(100% - 45px);
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-  overflow: hidden;
-  transition: all .5s;
-}
-
-a.list-music-title {
-  font-size: 0.875em;
-}
-
-a.list-music-author {
-  color: rgb(136, 136, 136);
-  font-size: 0.7em;
-}
-
-a.list-music-id {
-  text-align: center;
-  font-size: 0.5em;
-  color: rgb(136, 136, 136);
-  display: block;
-}
-
-a.list-music-id.hide {
-  display: none;
-}
-
-a.list-music-state {
-  display: none;
-  text-align: center;
-  line-height: 1;
-}
-
-a.list-music-state.show {
-  display: block;
-}
-
-li.music-list-item.current-play {
-  background-color: var(--vercel-hover-bg);
-  transition: .5s;
-}
-
-.console-list-head a.headline {
-  display: block;
-  /* height: 50%; */
-  font-size: 1.1rem;
-  font-weight: bold;
-  padding-top: 15px;
-  line-height: 1;
-}
-
-.console-list-head a.footline {
-  display: block;
-  margin-top: 5px;
-  line-height: 1;
-  font-size: 0.875rem;
-}
-
-/* a#music-list-title,
-a#songsheet-title {
-  display: block;
-  height: 50%;
-  font-size: 0.9rem;
-} */
-
-a#music-list-title {
-  cursor: pointer;
-}
-
-/* *********************歌单列表*********************** */
-#console-songsheet-list li {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-#console-songsheet-list li:last-child {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  height: 3rem;
-}
-
-#console-songsheet-list li:hover {
-  background-color: var(--vercel-hover-bg);
-}
-
-.songsheet-info1 {
-  width: 35px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.songsheet-info2 {
-  width: calc(100% - 45px);
-  padding: 12px 0;
-  white-space: nowrap;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid var(--vercel-border-color);
-  transition: all .5s;
-}
-
-.list-songsheet-cover {
-  height: 60px;
-  width: 60px;
-  border-radius: 8px;
-  mask-image: paint(smooth-corners);
-  -webkit-mask-image: paint(smooth-corners);
-  --smooth-level: 12;
-  /*曲率连续圆角*/
-
-}
-
-.list-songsheet-title {
-  margin-left: 1.5rem;
 }
