添加wiki页面脚手架（有兴趣可进行fork）

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2317,6 +2317,10 @@ style.
     font-size: 2.5rem;
     line-height: 1.5rem;
   }
+  /* 22.优化导航栏 */
+  a.site-page.child {
+    border-radius: 50px!important;
+  }
   /* 模块化调整 */
   /* 由苏晓河进行编写以及调整 */
   /* 时间：2025年2月4日 */
