--- a/themes/sxiaohe/layout/includes/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/page/flink.pug
@@ -13,7 +13,7 @@
           .banners-title-small 友情链接
           .banners-title-big=theme.linkPageTop ? theme.linkPageTop.title : "与数百名博主无限进步"
         .banner-button-group
-          a.banner-button.secondary.no-text-decoration(onclick="friendChainRandomTransmission()")
+          a.banner-button.secondary.no-text-decoration(onclick="travelling()")
             i.anzhiyufont.anzhiyu-icon-paper-plane1(style="margin-right: 8px;")
             span.banner-button-text 随机访问
           a.banner-button.no-text-decoration(onclick="addFriendLinksInFooter()")
