添加wiki页面脚手架（有兴趣可进行fork）

--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -76,5 +76,6 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     include ./rightside.pug
     !=partial('includes/third-party/search/index', {}, {cache: true})
     include ./additional-js.pug
+    include ./sxiaohe_pug/widget/cosole_lever_up.pug
     //- 自定义js文件（核心文件）
     include ./sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
