--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -39,6 +39,10 @@ nav#nav
         a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="ctrl.showConsole()" rel="external nofollow" title="控制中心")
           i.anzhiyu-icon-train.anzhiyufont
 
+      #console-switch.nav-button
+        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="codm.showCodmConsole()" rel="external nofollow" title="控制中心")
+          i.anzhiyu-icon-train.anzhiyufont
+
       .nav-button#search-button(title="随机前往一个开往项目网站")
         a.site-page(data-pjax-state="external" draggable="false" href="https://www.travellings.cn/go.html" rel="external nofollow" title="随机前往一个开往项目网站")
           i.anzhiyu-icon-train.anzhiyufont
