--- a/themes/sxiaohe/source/css/index.styl
+++ b/themes/sxiaohe/source/css/index.styl
@@ -17,3 +17,4 @@ if hexo-config('css_prefix')
 @import './coin.css'
 @import '_gavin_diy_style/*.css'
 @import './snackbar.css'
+@import './codm_console.css'
