添加wiki页面脚手架（有兴趣可进行fork）

--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -40,7 +40,7 @@ nav#nav
           i.anzhiyu-icon-train.anzhiyufont
 
       #console-switch.nav-button
-        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="codm.showCodmConsole()" rel="external nofollow" title="控制中心")
+        a.console-switch-btn(data-pjax-state="external" href="javascript:void(0);" onclick="codmConsoleShowOfHide.showCodmConsole()" rel="external nofollow" title="控制中心")
           i.anzhiyu-icon-train.anzhiyufont
 
       .nav-button#search-button(title="随机前往一个开往项目网站")
