--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/cosole_lever_up.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/cosole_lever_up.pug
@@ -4,7 +4,7 @@
             .console_head
                 span= head.name
                 .head-btn
-                    .close_up_bottom(onclick="codm.hideCodmConsole()")
+                    .close_up_bottom(onclick="codmConsoleShowOfHide.hideCodmConsole()")
                         i.fas.fa-circle-xmark
         each id in i.level_up_menu
             .level_up_group#left(style="margin-left:360px")
