添加wiki页面脚手架（有兴趣可进行fork）

--- a/themes/sxiaohe/layout/page.pug
+++ b/themes/sxiaohe/layout/page.pug
@@ -10,6 +10,8 @@ block content
         include includes/sxiaohe_pug/page/essays.pug
       when 'essay'
         include includes/sxiaohe_pug/page/essay.pug
+      when 'collect'
+        include includes/sxiaohe_pug/page/collect.pug
       when 'about'
         include includes/sxiaohe_pug/page/about.pug
       when 'equipment'
