--- a/themes/sxiaohe/source/css/_sxiaohe_diy_style/style/index.css
+++ b/themes/sxiaohe/source/css/_sxiaohe_diy_style/style/index.css
@@ -338,3 +338,77 @@ nav#pagination {
     border-image: initial;
     border-radius: 10px;
 }
+/* 20.文章展开区域调整 */
+details.folding-tag[open] >div.content {
+    padding: 16px;
+    margin: -16px;
+    margin-top: 0;
+}
+[data-theme="dark"] details[open] > div.content {
+    padding: 16px;
+    margin: -16px;
+    margin-top: 0;
+    background: #2c2d2d;
+    color: rgba(255, 255, 255, 0.6);
+}
+details.folding-tag[open][cyan] >summary {
+    border-bottom-color: rgba(27, 205, 252, 0.3);
+}
+details.folding-tag[open] >summary {
+    color: #444;
+    margin-bottom: 0;
+}
+details.folding-tag[open] >summary {
+    border-bottom: 1px solid rgba(68, 68, 68, 0.2);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+details.folding-tag summary {
+    cursor: pointer;
+    padding: 16px;
+    margin: -16px;
+    border-radius: 4px;
+    color: rgba(68, 68, 68, 0.7);
+    font-size: 0.875rem !important;
+    font-weight: bold;
+    position: relative;
+    line-height: normal;
+}
+details.folding-tag {
+    display: block;
+    padding: 16px;
+    margin: 1em 0;
+    border-radius: 4px;
+    background: #fff;
+    font-size: var(--global-font-size);
+    transition: all 0.28s ease;
+    -moz-transition: all 0.28s ease;
+    -webkit-transition: all 0.28s ease;
+    -o-transition: all 0.28s ease;
+    border: 1px solid #f6f6f6;
+}
+/* 21.文章序列美化 */
+#article-container li::marker {
+    color: #00c4b6 !important;
+}
+#article-container li::marker {
+    font-weight: 600;
+    font-size: 1.2em;
+}
+ol {
+    padding-inline-start: 20px;
+}
+/* 22.归档、分类、标签的文章卡片序列美化 */
+span.article-sort-item-index {
+    opacity: .5;
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    font-style: italic;
+    font-size: 2.5rem;
+    line-height: 1.5rem;
+}
+/* 23.优化导航栏 */
+a.site-page.child {
+    border-radius: 50px!important;
+}
