删除部分内容添加部分样式

--- a/themes/sxiaohe/layout/includes/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/page/flink.pug
@@ -6,7 +6,7 @@
       background: none!important;
       padding: 0!important
     }
-  if theme.linkPageTop && theme.linkPageTop.enable
+  #flink_top
     #flink-banners
       .banner-top-box
         .flink-banners-title
