--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/diy_css.pug
@@ -2583,6 +2583,11 @@ style.
   .layout.hide-aside {
     max-width: 1300px;
   }
+  @media screen and (max-width: 768px) {
+    .layout {
+        padding: 0 15px!important;
+    }
+  }
 
   /* 4.即刻短文卡片颜色更改 */
   #bbTimeList {
