删除部分内容添加部分样式

--- a/themes/sxiaohe/layout/includes/page/flink.pug
+++ b/themes/sxiaohe/layout/includes/page/flink.pug
@@ -93,6 +93,19 @@
               - randomList.sort(() => Math.random() - 0.5)
             each item in randomList
               a.site-card(target='_blank' rel='noopener' href=url_for(item.link) style="width: calc(100% / 5 - 16px)")
+                //- .tags
+                //-   each color , tags in i.link_list
+                //-     - let color = color.color || ""
+                //-     - let tag = tags.tag || ""
+                    
+                //-     .flink-list-item
+                //-       if color == "vip" && tag
+                //-         span.site-card-tag.vip #[=tag]
+                //-           i.light
+                //-       else if color == "speed" && tag
+                //-         span.site-card-tag.speed #[=tag]
+                //-       else if tag
+                //-         span.site-card-tag(style=`background-color: ${color}`) #[=tag]
                 .img
                   - var siteshot = item.siteshot ? url_for(item.siteshot) : 'https://s0.wp.com/mshots/v1/' + item.link + '?w=400&h=300'
                   img.nolazyload.no-lightbox(src=siteshot onerror=`this.onerror=null;this.src='` + url_for(theme.error_img.post_page) + `'` alt='' )
