--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/widget/Floating_telescopic_sidebar.pug
@@ -21,7 +21,7 @@
                 .post-qr-code-desc 微信
               li.reward-item
                 a.about-reward(href="" target="_blank")
-                  img.post-qr-code-img(alt="支付宝" src="https://cloud.myxz.top/d/pay/zfb.png?sign=jcRRGZcwiCDE27CtNsOPBqoTwhhRViiDtpBjgOLaaz0=:0")
+                  img.post-qr-code-img(alt="支付宝" src="https://sourceimage.s3.bitiful.net/pay/zfb.png")
                 .post-qr-code-desc 支付宝
       style.
         .post-qr-code-desc {
