--- a/themes/sxiaohe/layout/includes/page/flink_css.pug
+++ b/themes/sxiaohe/layout/includes/page/flink_css.pug
@@ -189,7 +189,7 @@ style.
   /* 1.美化延迟卡片 */
   .state {
     position: absolute;
-    left: 10px;
+    right: -5px;
     top: 5px;
     font-size: 12px;
     color: #ddd;
@@ -203,7 +203,6 @@ style.
     border-radius: 11.5px !important;
   }
   .site-card-group.link-no-img .site-card .state {
-    left: 3px;
     top: 3px;
   }
 
